defended some functions against null input

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: zsmith <zsmith@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/09/22 16:32:25 by zsmith            #+#    #+#              #
-#    Updated: 2016/10/06 18:03:45 by zsmith           ###   ########.fr        #
+#    Updated: 2016/10/10 14:18:46 by zsmith           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -77,6 +77,8 @@ CFILES	=	ft_memset.c 	\
 			ft_tab_to_list.c\
 			ft_strdup_c.c	\
 			ft_numlen.c		\
+			ft_strdup_n.c	\
+			ft_strccat.c	\
 			
 HFILES	=	libft.h
 OFILES	=	$(CFILES:.c=.o)
